# agent-package-basic

./: .gitignore  .rumdl.toml  README.md  dprint.json  mise.toml  pyproject.toml
scripts/: check_skill_frontmatter.py  sync_profile_deps.py
tests/: __init__.py  test_sync_profile_deps.py
